maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:22: error: not found: value SommeAngle
			sommeAngle = SommeAngle +1
                                     ^